Debug build with gcc fails https://bugs.webkit.org/show_bug.cgi?id=258551

Reviewed by Youenn Fablet.

Static cast of WebCore::ServiceWorkerState solves a problem with debug
build with gcc. It happens only in debug build because in release build
the RELEASE_ASSERT_WITH_MESSAGE expands to assert without message.

* Source/WebCore/workers/service/server/SWServerWorker.cpp:
(WebCore::SWServerWorker::didFinishInstall):
(WebCore::SWServerWorker::didFinishActivation):

Canonical link: https://commits.webkit.org/265546@main